--- a/about.html
+++ b/about.html
@@ -14,11 +14,11 @@ multilingual: true
     {{ about_zh | markdownify }}
 </div>
 
-<!-- English Version -->
-<div class="en post-container">
-    {% capture about_en %}{% include about/en.md %}{% endcapture %}
-    {{ about_en | markdownify }}
-</div>
+<!--&lt;!&ndash; English Version &ndash;&gt;-->
+<!--<div class="en post-container">-->
+<!--    {% capture about_en %}{% include about/en.md %}{% endcapture %}-->
+<!--    {{ about_en | markdownify }}-->
+<!--</div>-->
 
 
 {% if site.disqus_username %}
