--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@ multilingual: true
 {% include multilingual-sel.html %}
 
 <!-- Chinese Version -->
-<div class="zh post-container">
-    {% capture about_zh %}{% include about/zh.md %}{% endcapture %}
-    {{ about_zh | markdownify }}
-</div>
+<!--<div class="zh post-container">-->
+<!--    {% capture about_zh %}{% include about/zh.md %}{% endcapture %}-->
+<!--    {{ about_zh | markdownify }}-->
+<!--</div>-->
 
 <!--&lt;!&ndash; English Version &ndash;&gt;-->
 <!--<div class="en post-container">-->
